--- a/index.html
+++ b/index.html
@@ -6,10 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Javascript</title>
     <link rel="stylesheet" href="./main.css">
-
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="form-sign-up">
+        <form class="form-login" novalidate>
+            <div class="form-login-header">
+                <i class="bi bi-pencil-square"></i>
+                <span>REGISTER</span>
+            </div>
+            <div class="form-login-input">
+                <div class="mb-3 set-row">
+                    <label for="exampleInputUsername" class="form-label"><i class="bi bi-person-circle"></i></label>
+                    <input type="text" class="form-control" id="exampleInputUsername" placeholder="Username">
+                </div>
+                <div class="mb-3 set-row">
+                    <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock-fill"></i></label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 set-row">
+                    <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock-fill"></i></label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 set-row">
+                    <label for="exampleInputEmail1" class="form-label"><i class="bi bi-envelope"></i></label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="col-12 check">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                        <label class="form-check-label" for="invalidCheck">
+                            I agree to the <span>Terms of Servicee</span>
+                        </label>
+                        <div class="invalid-feedback">
+                            You must agree before submitting.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 btn-submit">
+                    <button class="btn btn-color" type="submit">Sign up</button>
+                </div>
+                <div class="col-12 login">
+                    <label for="">Already a member ? <span>Login Here</span></label>
+                </div>
+            </div>
+        </form>
+    </div>
 
 <script src="./index.js"></script>
 </body>
