--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <div class="form-login-input">
                 <div class="mb-3 set-row">
                     <label for="exampleInputUsername" class="form-label"><i class="bi bi-person-circle"></i></label>
-                    <input type="text" class="form-control" id="exampleInputUsername" placeholder="Username">
+                    <input type="text" class="form-control" id="exampleInputUsername" placeholder="Username" required>
                 </div>
                 <div class="mb-3 set-row">
                     <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock-fill"></i></label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <input type="password" class="form-control" id="exampleInputPassword1" required>
                 </div>
                 <div class="mb-3 set-row">
                     <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock-fill"></i></label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <input type="password" class="form-control" id="exampleInputPassword1" required>
                 </div>
                 <div class="mb-3 set-row">
                     <label for="exampleInputEmail1" class="form-label"><i class="bi bi-envelope"></i></label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
                 </div>
                 <div class="col-12 check">
                     <div class="form-check">
