--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                     <input type="text" class="form-control" id="exampleInputUsername" placeholder="Username" required>
                 </div>
                 <div class="mb-3 set-row">
-                    <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock-fill"></i></label>
+                    <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock"></i></label>
                     <input type="password" class="form-control" id="exampleInputPassword1" required>
                 </div>
                 <div class="mb-3 set-row">
-                    <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock-fill"></i></label>
+                    <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock"></i></label>
                     <input type="password" class="form-control" id="exampleInputPassword1" required>
                 </div>
                 <div class="mb-3 set-row">
