--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="form-sign-up">
-        <form class="form-login" novalidate>
+        <form class="form-login needs-validation" novalidate>
             <div class="form-login-header">
                 <i class="bi bi-pencil-square"></i>
                 <span>REGISTER</span>
