--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 </div>
                 <div class="mb-3 set-row">
                     <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock"></i></label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" required>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder=".........." required>
                 </div>
                 <div class="mb-3 set-row">
                     <label for="exampleInputPassword1" class="form-label"><i class="bi bi-file-lock"></i></label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" required>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder=".........." required>
                 </div>
                 <div class="mb-3 set-row">
                     <label for="exampleInputEmail1" class="form-label"><i class="bi bi-envelope"></i></label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail" required>
                 </div>
                 <div class="col-12 check">
                     <div class="form-check">
